manifests/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    app: hello  # Add label to match selector
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080  # Expose your application on port 5000
  tls:
    termination: edge  # Edge termination for TLS
